# Changelog

## v1.0.0 - 2020-12-30

* Initial release