@@ -18,6 +18,7 @@ dendrite_container_labels: {}
 dendrite_docker_networks: []
 dendrite_client_api_registration_shared_secret: ""
 dendrite_appservices: []
+dendrite_enabled_mscs: []
 
 # Unset
 #dendrite_metrics_basic_auth_username:
